Test on reusable workflows dev branch

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -3,7 +3,9 @@
 
 name: Run Tests
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches: [develop, release/*, hotfix/*]
 
 jobs:
   call_run_tests:
