--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   call_code_coverage:
-    uses: yext/slapshot-reusable-workflows/.github/workflows/coverage.yml@v1
+    uses: yext/slapshot-reusable-workflows/.github/workflows/coverage.yml@dev/test-output-env-file
     with:
       comparison_branch: master
     secrets:
