--- a/.github/workflows/run-linting.yml
+++ b/.github/workflows/run-linting.yml
@@ -2,7 +2,7 @@ name: Run Linter
 
 on:
   pull_request:
-    branches: [master, develop, release/*, hotfix/*]
+    branches: [develop, release/*, hotfix/*]
 
 jobs:
   linting:
