--- a/.github/workflows/sync_develop_and_main.yml
+++ b/.github/workflows/sync_develop_and_main.yml
@@ -5,6 +5,6 @@ on:
 
 jobs:
   call_sync_develop_and_main:
-    uses: yext/slapshot-reusable-workflows/.github/workflows/sync_develop_and_main.yml@v1
+    uses: yext/slapshot-reusable-workflows/.github/workflows/sync_develop_and_main.yml@dev/test-output-env-file
     secrets:
       caller_github_token: ${{ secrets.GITHUB_TOKEN }}
