--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -4,8 +4,6 @@ on: pull_request
 
 jobs:
   call_update_docs:
-    uses: yext/slapshot-reusable-workflows/.github/workflows/update_docs.yml@v1
+    uses: yext/slapshot-reusable-workflows/.github/workflows/update_docs.yml@dev/test-output-env-file
     with:
       build_script: npm run build-ci
-    secrets:
-      REPO_SCOPED_TOKEN: ${{ secrets.BOT_REPO_SCOPED_TOKEN }}
