--- a/.github/workflows/sync-sites-branch.yml
+++ b/.github/workflows/sync-sites-branch.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: mtanzi/action-automerge@v1
+      - uses: devmasx/merge-branch@master
         with:
-          source: "${{ github.event.repository.default_branch }}"
-          target: "test"
+          type: now
+          target_branch: test
           github_token: ${{ secrets.GITHUB_TOKEN }}
