--- a/.github/workflows/sync-sites-branch.yml
+++ b/.github/workflows/sync-sites-branch.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: devmasx/merge-branch@master
+      - uses: devmasx/merge-branch@v1.4.0
         with:
           type: now
           target_branch: test
