--- a/.github/workflows/sync_develop_and_main.yml
+++ b/.github/workflows/sync_develop_and_main.yml
@@ -1,8 +1,6 @@
 name: Create PR from main to develop
 
-on:
-  push:
-    branches: [main, master]
+on: workflow_call
 
 jobs:
   call_sync_develop_and_main:
