Use default_branch

--- a/.github/workflows/sync-sites-branch.yml
+++ b/.github/workflows/sync-sites-branch.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: devmasx/merge-branch@v1.4.0
         with:
           type: now
-          from_branch: 'master'
+          from_branch: ${{ github.event.repository.default_branch }}
           target_branch: test
           github_token: ${{ secrets.GITHUB_TOKEN }}
