--- a/.github/workflows/sync-sites-branch.yml
+++ b/.github/workflows/sync-sites-branch.yml
@@ -4,16 +4,11 @@ on:
   push:
     branches:
       - master
+
 jobs:
-  sync-branches:
-    runs-on: ubuntu-latest
-    name: Syncing branches
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - uses: devmasx/merge-branch@v1.4.0
-        with:
-          type: now
-          from_branch: ${{ github.event.repository.default_branch }}
-          target_branch: test
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+  call_sync_branches:
+    uses: yext/slapshot-reusable-workflows/.github/workflows/sync_default_branch.yml@dev/sync-default-branch
+    with:
+      target_branch: test
+    secrets:
+      caller_github_token: ${{ secrets.GITHUB_TOKEN }}
