Test basic on v1

--- a/.github/workflows/sync-sites-branch.yml
+++ b/.github/workflows/sync-sites-branch.yml
@@ -7,11 +7,8 @@ on:
 
 jobs:
   call_sync_branches:
-    strategy:
-      matrix:
-        target_branch: ["storybook-site", "test"]
-    uses: yext/slapshot-reusable-workflows/.github/workflows/sync_default_branch.yml@dev/sync-default-branch
+    uses: yext/slapshot-reusable-workflows/.github/workflows/sync_default_branch.yml@v1
     with:
-      target_branch: ${{ matrix.target_branch }}
+      target_branch: storybook-site
     secrets:
       caller_github_token: ${{ secrets.GITHUB_TOKEN }}
